# cppmagic

./: .gitignore  README.md  example.ipynb  nb_cppmagic.py  pyproject.toml
